syntax = "proto3";

package auth;

service UsersService {
  rpc CreateUser (CreateUserDto) returns (User) {}
  rpc FindAllUsers (Empty) returns (Users) {}
  rpc FindOneUser (FindOneUserDto) returns (User) {}
  rpc UpdateUser (UpdateUserDto) returns (User) {}
  rpc RemoveUser (FindOneUserDto) returns (User) {}
  rpc AddBookToUser (AddBookDto) returns (User) {}
  rpc RemoveBookFromUser (AddBookDto) returns (User) {}
}


message CreateUserDto {
    string fullname = 1;
    string username = 2;
    string password = 3;
}

message UpdateUserDto {
    string id = 1;
    string fullname = 2;
    string username = 3;
    string password = 4;
}

message FindOneUserDto {
    string id = 1;
}
message AddBookDto {
    string user_id = 1;
    string book_id = 2;
}

message Empty {};

message Users {
    repeated User users = 1;
}

message User {
    string id = 1;                     
    bool isActive = 2;                
    bool isDeleted = 3;               
    int64 createdAt = 4;              
    int64 updatedAt = 5;              
    int64 deletedAt = 6;              
    string fullname = 7;               
    string username = 8;               
    string password = 9;    
    repeated Book books = 10; // Userning kitoblari           
}

message Book {
    string id = 1;                     
    bool isActive = 2;                
    bool isDeleted = 3;               
    int64 createdAt = 4;              
    int64 updatedAt = 5;              
    int64 deletedAt = 6;              
    string name = 7;
    string description = 8;
    bool isSale = 9;             
}

